# firepath

./: .gitignore  .gitmodules  .ignore  .nvim.lua  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  rust-toolchain.toml
.github/: codecov.yml  renovate.json
.github/workflows/: ci.yml
crates/firepath/: Cargo.toml
crates/firepath/src/: check.rs  main.rs  print.rs
crates/firepath/tests/: cli.rs
crates/fixtures/: Cargo.toml  manifest.toml
crates/fixtures/src/: banking.rs  household.rs  lib.rs  main.rs  manifest.rs  rng.rs  upstream.rs
crates/fixtures/tests/: acceptance.rs  upstream.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: amount.rs  date.rs  directive.rs  error.rs  lib.rs  lines.rs  parse.rs  posting.rs  scan.rs  span.rs  transaction.rs  write.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: diag.rs  docs.rs  lib.rs  log.rs  main_loop.rs  server.rs  tokens.rs
crates/lsp/tests/: session.rs
