[workspace]
resolver = "3"
members = ["crates/firepath"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Mario Lopez"]

[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Money must never silently overflow or panic in the engine.
# Money is kept out of floats by the type system, not by clippy::float_arithmetic,
# which cannot tell a dollar amount from a growth rate
arithmetic_side_effects = "warn"
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
indexing_slicing = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
