[workspace]
resolver = "3"
members = ["crates/firepath", "crates/fixtures", "crates/ledger"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Mario Lopez"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
memchr = "2.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"

[workspace.lints.rust]
# coverage and coverage_nightly are injected by cargo-llvm-cov, not by cargo,
# so declare them or unexpected_cfgs fails the -D warnings clippy step
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(coverage_nightly)',
] }
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Money must never silently overflow or panic in the engine.
# Money is kept out of floats by the type system, not by clippy::float_arithmetic,
# which cannot tell a dollar amount from a growth rate
arithmetic_side_effects = "warn"
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
indexing_slicing = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
