[workspace]
resolver = "3"
members = ["crates/firepath", "crates/fixtures", "crates/ledger", "crates/lsp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Mario Lopez"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
jiff = { version = "0.2", default-features = false, features = ["std"] }
lsp-server = "0.10"
lsp-types = "0.97"
memchr = "2.8"
rand_core = "0.10"
rand_pcg = "0.10"
rust_decimal = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"

[workspace.lints.rust]
# coverage and coverage_nightly are injected by cargo-llvm-cov, not by cargo,
# so declare them or unexpected_cfgs fails the -D warnings clippy step
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(coverage_nightly)',
] }
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Money must never silently overflow or panic in the engine.
# Money is kept out of floats by the type system, not by clippy::float_arithmetic,
# which cannot tell a dollar amount from a growth rate
arithmetic_side_effects = "warn"
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
indexing_slicing = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
