[package]
name = "firepath"
version.workspace = true
description = "FIRE budgeting, planning, and retirement tool driven by ledger journals"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
firepath-ledger = { path = "../ledger", version = "0.1.0" }
firepath-lsp = { path = "../lsp", version = "0.1.0" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
