[package]
name = "firepath-ledger"
version.workspace = true
description = "Parser for the ledger journal grammar"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
jiff.workspace = true
memchr.workspace = true
rust_decimal.workspace = true

[lints]
workspace = true
