[package]
name = "firepath-lsp"
version.workspace = true
description = "Language server for ledger journals"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
