[package]
name = "firepath-lsp"
version.workspace = true
description = "Language server for ledger journals"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
firepath-ledger = { path = "../ledger", version = "0.1.0" }
lsp-server.workspace = true
lsp-types.workspace = true
memchr.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
